# sitplus

./: .gitignore  pyproject.toml  readme.md  setup_blender.py
sitplus/: model.py
sitplus/generators/: blender_bridge_server.py  generate_utahs.py  generate_utahs_poison.py  parametric.py  teapot_dataset.py  utah_teapot_notice.txt
sitplus/utils/: attention.py  dataset_utils.py  decoder.py  dwt_tokenizer.py  encoder.py  ipc_protocol.py  masks.py  optimizer_util.py  quantizer.py
tests/: benchmark_teapot_hertz.py  test_aspect_ratio.py  test_autoencode.py  test_compile.py  test_encoder_layer.py  test_rope  test_swa_mask.py  test_tokenizer.py  test_wavelet_core.py  test_wavelet_performance.py
texts/arXiv-2411.02038v3/: 00README.json  main.bbl  main.bib  main.tex
texts/arXiv-2411.02038v3/sec/: 0_abstract.tex  1_intro.tex  2_formatting.tex  X_suppl.tex
